--- a/index.html
+++ b/index.html
@@ -8,7 +8,40 @@
     <title>Calculadora</title>
 </head>
 <body>
-    <div class="fundo">
+    <section id="fundo">
+        <div id="calculadora">
+            <p id="tela"></p>
+
+            <div id="container-teclas">
+                <div id="teclas">
+                    <button>C</button>
+                    <button>&lt;</button>
+                    <button>/</button>
+                    <button>x</button>
+                    <button>7</button>
+                    <button>8</button>
+                    <button>9</button>
+                    <button>-</button>
+                    <button>4</button>
+                    <button>5</button>
+                    <button>6</button>
+                    <button>+</button>
+                    <button>1</button>
+                    <button>2</button>
+                    <button>3</button>
+                    <button id="igual">=</button>
+                    <button id="zero">0</button>
+                    <button>.</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="./codigo.js"></script>
+</body>
+</html>
+
+<!-- <div class="fundo">
         <h1>Rafael ott</h1>
 
         <div class="calculadora">
@@ -51,8 +84,4 @@
                 </tr>
             </table>
         </div>
-    </div>
-
-    <script src="./codigo.js"></script>
-</body>
-</html>
+    </div> -->
