--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                     <button>1</button>
                     <button>2</button>
                     <button>3</button>
-                    <button id="igual">=</button>
-                    <button id="zero">0</button>
                     <button>.</button>
+                    <button>0</button>
+                    <button>(</button>
+                    <button>)</button>
+                    <button id="igual">=</button>
                 </div>
             </div>
         </div>
